--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="darkBlueApp">#009FC2</color>
+    <color name="lightBlueApp">#FFDEFDFF</color>
+    <color name="yellowApp">#FFD705</color>
 </resources>
