--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginBottom="632dp"
         android:fontFamily="@font/mada_black"
-        android:text="Smartsens"
+        android:text="@string/smartsens"
         android:textAlignment="center"
         android:textColor="#009FC2"
         android:textSize="40sp"
@@ -22,7 +22,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/icn_pansement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/titleSmartsens"
@@ -31,7 +31,9 @@
         app:layout_constraintStart_toEndOf="@+id/titleSmartsens"
         app:layout_constraintTop_toTopOf="@+id/titleSmartsens"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/healing_60" />
+        app:srcCompat="@drawable/healing_60"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/todo" />
 
     <EditText
         android:id="@+id/email"
@@ -43,11 +45,12 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
-        android:text="blabla@email.com"
+        android:text="@string/blabla_email_com"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/connection" />
+        app:layout_constraintTop_toBottomOf="@+id/connection"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -58,13 +61,14 @@
         android:ems="10"
         android:inputType="textPassword"
         android:minHeight="48dp"
-        android:text="xxxxxxxxxxx"
+        android:text="@string/xxxxxxxxxxx"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/connection"
@@ -72,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="138dp"
         android:fontFamily="@font/mada_semibold"
-        android:text="Connexion"
+        android:text="@string/connexion"
         android:textColor="#009FC2"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,9 +89,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:backgroundTint="@color/darkBlueApp"
         android:fontFamily="@font/mada_semibold"
-        android:text="Valider"
+        android:text="@string/valider"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         app:cornerRadius="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.248"
@@ -100,8 +106,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="32dp"
-        android:text="Annuler"
+        android:backgroundTint="@color/yellowApp"
+        android:text="@string/annuler"
         android:textAllCaps="false"
+        android:textColor="@color/black"
         app:cornerRadius="45dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
