add files connection type

--- a/app/src/main/res/layout/activity_connection_type.xml
+++ b/app/src/main/res/layout/activity_connection_type.xml
@@ -34,31 +34,54 @@
 
     <Button
         android:id="@+id/btn_nfc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="120dp"
         android:backgroundTint="@color/lightBlueApp"
-        android:text="NFC"
         android:textAllCaps="false"
         app:cornerRadius="20dp"
+        app:icon="@drawable/ic_baseline_nfc_80"
+        app:iconTint="@color/darkBlueApp"
         app:strokeColor="@color/darkBlueApp"
         app:strokeWidth="10px"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="391dp" />
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="346dp" />
 
     <Button
         android:id="@+id/btn_bluetooth"
-        android:layout_width="116dp"
-        android:layout_height="136dp"
-        android:layout_marginTop="131dp"
+        android:layout_width="110dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="84dp"
         android:backgroundTint="@color/lightBlueApp"
         app:cornerRadius="20dp"
         app:icon="@drawable/ic_baseline_bluetooth_connected_80"
         app:iconTint="@color/darkBlueApp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/typeDeConnexion"
         app:strokeColor="@color/darkBlueApp"
         app:strokeWidth="10px" />
+
+    <TextView
+        android:id="@+id/txt_NFC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/mada_black"
+        android:text="NFC"
+        android:textColor="@color/darkBlueApp"
+        android:textSize="28sp"
+        tools:layout_editor_absoluteX="180dp"
+        tools:layout_editor_absoluteY="466dp" />
+
+    <TextView
+        android:id="@+id/txt_Bluetooth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/mada_black"
+        android:text="Bluetooth"
+        android:textColor="@color/darkBlueApp"
+        android:textSize="28sp"
+        tools:layout_editor_absoluteX="142dp"
+        tools:layout_editor_absoluteY="274dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
